--- a/people.html
+++ b/people.html
@@ -80,6 +80,11 @@
 											</div>
 										</article>
 										<article>
+                                            <div class="content">
+                                                <a href="#" class="image"><img src="images/Bhuyan.jpeg" alt="" /></a>
+                                                <h3>Dr Mrutunjaya Bhuyan</h3>
+                                                <p>Senior Lecturer <br>
+                                                email :bunuphy@um.edu.my</p>
 											<!--span class="icon solid fa-rocket"></span-->
 											<div class="content">
                                                 <a href="#" class="image"><img src="images/suria.png" alt="" /></a>
