--- a/people.html
+++ b/people.html
@@ -81,7 +81,7 @@
 										</article>
 										<article>
                                             <div class="content">
-                                                <a href="#" class="image"><img src="images/Bhuyan.jpeg" alt="" /></a>
+                                                <a href="#" class="image"><img src="images/Bhuyan.jpeg" alt="" width="200" height="200" /></a>
                                                 <h3>Dr Mrutunjaya Bhuyan</h3>
                                                 <p>Senior Lecturer <br>
                                                 email :bunuphy@um.edu.my</p>
