--- a/research.html
+++ b/research.html
@@ -54,8 +54,18 @@
 									<hr class="major" />
 
 									<h2>Stellar structure and evolution</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									<p>.</p>
+									<p>We present a grid of stellar models at supersolar metallicity (Z = 0.020) extending the previous grids of Geneva models at solar and sub-solar metallicities. A metallicity of Z = 0.020 was chosen to match that of the inner Galactic disc. A modest increase of 43 per cent (= 0.02/0.014) in metallicity compared to solar models means that the models evolve similarly to solar models but with slightly larger mass-loss. Mass-loss limits the final total masses of the supersolar models to 35 M⊙ even for stars with initial masses much larger than 100 M⊙. Mass-loss is strong enough in stars above 20 M⊙ for rotating stars (25 M⊙ for non-rotating stars) to remove the entire hydrogen-rich envelope. Our models thus predict SNII below 20 M⊙ for rotating stars (25 M⊙ for non-rotating stars) and SNIb (possibly SNIc) above that. We computed both isochrones and synthetic clusters to compare our supersolar models to the Westerlund 1 (Wd1) massive young cluster. A synthetic cluster combining rotating and non-rotating models with an age spread between log10(age/yr) = 6.7 and 7.0 is able to reproduce qualitatively the observed populations of WR, RSG, and YSG stars in Wd1, in particular their simultaneous presence at
+                                    log
+                                    10
+                                    ⁡
+                                    (
+                                    L
+                                    /
+                                    L
+                                    ⊙
+                                    )
+                                     = 5–5.5. The quantitative agreement is imperfect and we discuss the likely causes: synthetic cluster parameters, binary interactions, mass-loss and their related uncertainties. In particular, mass-loss in the cool part of the HRD plays a key role.</p>
                                     <span class="image fit"><img src="images/stellar_grid.png" alt="" /></span>
                                                <!--img src="images/stellar_grid.png" alt="neu" width="1000" height="500"-->
                                     <!--span class="image object"><img src="images/stellar_grid.png" alt="" /></span-->
