--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 									</header>
 									<div class="mini-posts">
                                         <article>
-                                            <a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-                                            <p>Coming soon! Introduction to Python for beginners.</p>
+                                            <a href="#" class="image"><img src="images/PerFUMPCC.png" alt="" /></a>
+                                            <p>Python Code Camp for beginners organised by Persatuan Fizik UM.</p>
                                         </article>
 										<article>
 											<a href="#" class="image"><img src="images/IAU_Malaysia.jpeg" alt="" /></a>
