--- a/event.html
+++ b/event.html
@@ -48,8 +48,9 @@
 									
 									
 
-									<h2>Python For Beginners</h2>
-									<p>Coming soon!</p>
+									<h2>PerFUM Python Code Camp 2023</h2>
+									<p>Python Code Camp 2023 has been organised by Persatuan Fizik UM to introduce to the student the basic guidance in how to write codes for scientific computing. </p>
+                                    <span class="image fit"><img src="images/PerFUMPCC.png" alt="" /></span>
 									<!--p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p-->
 
 								</section>
