--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
 										<h2>Recent Publications</h2>
 									</header>
 									<div class="features">
+                                        <article>
+                                            <!--span class="icon fa-gem"></span-->
+                                            <div class="content">
+                                                <h3> Grids of stellar models with rotation VIII: Models from 1.7 to 500 M⊙ at metallicity Z = 10^-5 </h3>
+                                                <p> Sibony, Yves ;  Shepherd, Kendall G. ;  Yusof, Norhasliza ;  Hirschi, Raphael ; Chambers, Caitlan ;  Tsiatsiou, Sophie ;  Nandal, Devesh ;  Sciarini, Luca ; Moyano, Facundo D. ;  Bétrisey, Jérôme ;  Buldgen, Gaël ;  Georgy, Cyril ; Ekström, Sylvia ;  Eggenberger, Patrick ;  Meynet, Georges, Astronomy and Astrophysics (accepted for publication). <a href="https://ui.adsabs.harvard.edu/abs/2024arXiv240706739S/abstract">ADS link</a></p>
+                                            </div>
+                                        </article>
+                                        
 										<article>
 											<!--span class="icon fa-gem"></span-->
 											<div class="content">
@@ -71,8 +79,8 @@
 										<article>
 											<!--span class="icon solid fa-paper-plane"></span-->
 											<div class="content">
-												<h3>Grids of stellar models with rotation-VI. Models from 0.8 to 120 M⊙ at a metallicity Z= 0.006</h3>
-												<p>Patrick Eggenberger, Sylvia Ekström, Cyril Georgy, Sébastien Martinet, Camilla Pezzotti, Devesh Nandal, Georges Meynet, Gaël Buldgen, Sébastien Salmon, Lionel Haemmerlé, André Maeder, Raphael Hirschi, Norhasliza Yusof, José Groh, Eoin Farrell, Laura Murphy and Arthur Choplin, Astronomy & Astrophysics Volume 652, August 2021, A137 <a href="https://ui.adsabs.harvard.edu/abs/2021A%26A...652A.137E/abstract">ADS link</a></p>
+												<h3>Dark energy stars in the context of black holes — The physical profiles, </h3>
+												<p>Azman, Muhamad Ashraf; Yusof, Norhasliza; Kassim, Hasan Abu; Marcos, Juan Carlos Algaba,Modern Physics Letters A, Volume 39, Issue 11, id. 2450043-434 (2024) <a href="https://ui.adsabs.harvard.edu/abs/2024MPLA...3950043A/abstract">ADS link</a></p>
 											</div>
 										</article>
 										<article>
