--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 										
 										
 									</div>
+									<p>If you want to explore more project in stellar astrophysics or nuclear astrophysics, please contact Dr Norhasliza Yusof at norhaslizay@um.edu.my.</p>
 								</section-->
 
 						</div>
